--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,11 +1,5 @@
 /*модальное окно*/
 
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -15,6 +9,12 @@
   opacity: 1;
   visibility: visible;
   background-color: rgba(0, 0, 0, 0.2);
+
+  &.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .modal {
