--- a/sass/layout/_header-portfolio.scss
+++ b/sass/layout/_header-portfolio.scss
@@ -1,26 +1,21 @@
 /* страничка портфолио */
 
-.header-portfolio .navigation-list-item:nth-child(2)::after {
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  display: flex;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-}
-
 .header-portfolio {
   border-bottom: 1px solid #ececec;
+
+  .navigation-list-item:nth-child(2)::after {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    display: flex;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+  }
 }
 
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
-  color: $text-dark-theme-color;
-  background-color: $accent-color;
-}
 .portfolio-list-link {
   font-weight: 500;
   font-size: 16px;
@@ -28,4 +23,10 @@
   letter-spacing: 0.06em;
   color: $title-light-theme-color;
   background-color: #f5f4fa;
+
+  &:hover,
+  &:focus {
+    color: $text-dark-theme-color;
+    background-color: $accent-color;
+  }
 }
