--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -9,13 +9,16 @@
   border-radius: 4px;
   border: 1px solid #afb1b8;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.position-title {
-  font-weight: 400;
-  color: $text-light-theme-color;
-  margin-top: 10px;
-  margin-bottom: 16px;
+  &:hover,
+  &:focus {
+    border: 1px solid #2196f3;
+  }
+
+  &:hover .regular-customers-list-item-svg,
+  &:focus .regular-customers-list-item-svg {
+    fill: $accent-color;
+  }
 }
 
 .regular-customers-list-svg {
@@ -26,17 +29,7 @@
   align-items: center;
 }
 
-.regular-customers-list-item:hover,
-.regular-customers-list-item:focus {
-  border: 1px solid #2196f3;
-}
-
 .regular-customers-list-item-svg {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.regular-customers-list-item:hover .regular-customers-list-item-svg,
-.regular-customers-list-item:focus .regular-customers-list-item-svg {
-  fill: $accent-color;
 }
