--- a/sass/layout/_work-examples-filter.scss
+++ b/sass/layout/_work-examples-filter.scss
@@ -22,12 +22,12 @@
   padding: 6px 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.work-examples-button:hover,
-.work-examples-button:focus {
-  color: $text-dark-theme-color;
-  background-color: $accent-color;
+  &:hover,
+  &:focus {
+    color: $text-dark-theme-color;
+    background-color: $accent-color;
+  }
 }
 
 .work-examples-filter-item:not(:last-child) {
