--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 @import "./components/container";
 @import "./components/section";
 @import "./components/modal";
+@import "./components/subtitle";
+@import "./components/logo";
+@import "./components/title";
 
 @import "./layout/header";
 @import "./layout/hero";
